--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^11.4.2",
     "rxjs": "~6.6.0",
